syntax = "proto3";

package sec06;

import "google/protobuf/empty.proto";

option java_package = "com.nexusforge.grpcplayground.models.sec06";
option java_multiple_files = true;

message BalanceCheckRequest{
  int32 account_number = 1;
}

message AccountBalance{
  int32 account_number = 1;
  int32 balance = 2;
}
message AllAccountResponse{
  repeated AccountBalance accounts = 1;
}
message WithdrawRequest{
  int32 account_number = 1;
  int32 amount = 2;
}

message Money{
  int32 amount = 1;
}
message DepositRequest{
  // setting the context of the request
  oneof request {
    int32 account_number = 1;
    Money money = 2;
  }
  // we send acount info first then subseqently money value
}

service BankService{
  //unary
  rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);
  rpc GetAllAccounts(google.protobuf.Empty) returns (AllAccountResponse);

  //server streaming
  rpc Withdraw(WithdrawRequest) returns (stream Money);

  //client streaming
  rpc Deposit(stream DepositRequest) returns (AccountBalance);
}